fix border overflow

--- a/css/general.css
+++ b/css/general.css
@@ -104,6 +104,7 @@ a.link{
   clear:both;
   width: 100%;
   float: left;
+  box-sizing: border-box;
 }
 
 .editor-section h2{
